<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddressActivity">

    <TextView
        android:id="@+id/tv_login_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sp_32"
        android:layout_marginBottom="@dimen/sp_16"
        android:text="@string/add_address"
        android:textColor="@color/colorText"
        android:textSize="@dimen/sp_40"
        app:layout_constraintLeft_toLeftOf="@id/et_address_street"
        app:layout_constraintBottom_toTopOf="@id/et_address_street" />

    <EditText
        android:id="@+id/et_address_street"
        android:layout_width="@dimen/sp_310"
        android:layout_height="@dimen/sp_50"
        android:layout_marginBottom="@dimen/sp_16"
        android:background="@drawable/input_field"
        android:hint="@string/street"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/et_address_number"
        app:layout_constraintEnd_toEndOf="@+id/et_address_number"
        app:layout_constraintStart_toStartOf="@+id/et_address_number" />

    <EditText
        android:id="@+id/et_address_number"
        android:layout_width="@dimen/sp_310"
        android:layout_height="@dimen/sp_50"
        android:layout_marginBottom="@dimen/sp_16"
        android:background="@drawable/input_field"
        android:hint="@string/number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/et_address_neighborhood"
        app:layout_constraintEnd_toEndOf="@+id/et_address_neighborhood"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_address_neighborhood"
        android:layout_width="@dimen/sp_310"
        android:layout_height="@dimen/sp_50"
        android:background="@drawable/input_field"
        android:layout_marginTop="@dimen/sp_16"
        android:hint="@string/city"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/et_address_state"
        android:layout_width="@dimen/sp_310"
        android:layout_height="@dimen/sp_50"
        android:background="@drawable/input_field"
        android:layout_marginTop="@dimen/sp_16"
        android:hint="@string/state"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/et_address_neighborhood"
        app:layout_constraintStart_toStartOf="@+id/et_address_neighborhood"
        app:layout_constraintTop_toBottomOf="@+id/et_address_neighborhood" />

    <EditText
        android:id="@+id/et_address_zip_code"
        android:layout_width="@dimen/sp_310"
        android:layout_height="@dimen/sp_50"
        android:background="@drawable/input_field"
        android:layout_marginTop="@dimen/sp_16"
        android:hint="@string/zip_code"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/et_address_state"
        app:layout_constraintStart_toStartOf="@+id/et_address_state"
        app:layout_constraintTop_toBottomOf="@+id/et_address_state" />

    <Button
        android:id="@+id/bt_address_save"
        android:layout_width="@dimen/sp_162"
        android:layout_height="@dimen/sp_53"
        android:background="@drawable/button"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_24"
        android:layout_marginTop="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="@+id/et_address_zip_code"
        app:layout_constraintTop_toBottomOf="@+id/et_address_zip_code" />

</androidx.constraintlayout.widget.ConstraintLayout>